<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.6</version>
        <relativePath/>
    </parent>

    <groupId>os.psy.research</groupId>
    <artifactId>spotlight</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>spotlight</name>
    <packaging>pom</packaging>
    <description>Time Analysis Application</description>

    <modules>
        <module>spotlight-time-flyway</module>
        <module>spotlight-time</module>
        <module>spotlight-link</module>
        <module>spotlight-core</module>
        <module>spotlight-link-flyway</module>
    </modules>

    <properties>
        <java.version>17</java.version>
    </properties>

</project>
